--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -1,3 +1,9 @@
 .dashboard-container div{
-    margin: 0 auto;
+    margin: 5px auto;
+}
+@media screen and (min-width: 992px) {
+    .dashboard-container{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
